# dnd-rulebook-llm

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  gradio.Dockerfile  gradio_app.py  pyproject.toml
.github/workflows/: ci.yml  docker-build-push.yml  lint.yml
app/: config.py  main.py
backend/: Dockerfile  backend.py  config.py  pyproject.toml
backend/k8s/base/: frontend-deployment.yaml  frontend-expose.yaml  frontend-service.yaml  kustomization.yaml
backend/k8s/overlays/desktop/: backend-deployment.yaml  backend-service.yaml  frontend-service.yaml
backend/k8s/overlays/model-runner/: model-runner-service.yaml
backend/scripts/: extract_data.py  process_data.py  query_db.py  query_llm.py
data/: dnd_rules_markdown.md
frontend/: Dockerfile  frontend.py  pyproject.toml
k8s/base/: 0-dnd-rulebook-llm-namespace.yaml  app-deployment.yaml  app-service.yaml  backend-deployment.yaml  backend-expose.yaml  backend-service.yaml  default-network-policy.yaml  gradio-deployment.yaml  gradio-expose.yaml  gradio-service.yaml  kustomization.yaml
k8s/overlays/desktop/: app-service.yaml  gradio-ingress.yaml  gradio-service.yaml  kustomization.yaml
k8s/overlays/model-runner/: model-runner-deployment.yaml  model-runner-volume-claim.yaml
resources/: dnd_rules_markdown.md
scripts/: extract_data.py  process_data.py  query_db.py  query_llm.py
